--- a/css/styles.css
+++ b/css/styles.css
@@ -9,17 +9,64 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
-    gap: 15px; 
+    gap: 65px; 
 }
 
 .grid div {
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     padding: 15px;
-    border-radius: 8px; 
+    /* border-radius: 8px;  */
     text-align: center; 
 }
 
 .grid img {
-    max-width: 100%; 
+    max-width: 90%; 
     height: auto; 
+}
+
+.card {
+    position: relative;
+    width: 300px;
+    height: 400px;
+    perspective: 1000px; /*3D*/
+    margin: 20px; 
+}
+
+.card-front, .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden; 
+    border: 1px solid #c4c2c2;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.9s; 
+}
+
+.card-front {
+    background: rgba(163, 230, 202, 0.7);
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.card-back {
+    background: rgba(173, 216, 230, 0.7);
+    transform: rotateY(180deg); 
+    display: flex;
+    flex-direction: column;
+}
+
+.card.flipped .card-front {
+    transform: rotateY(180deg); 
+}
+
+.card.flipped .card-back {
+    transform: rotateY(0); 
+}
+
+.card-front h2, .card-front h6 {
+    margin: 8px; 
 }
