--- a/css/styles.css
+++ b/css/styles.css
@@ -9,18 +9,16 @@
 .grid {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); 
-    gap: 65px; 
+    gap: 70px; 
 }
 
 .grid div {
-    /* border: 1px solid #ccc; */
-    padding: 15px;
-    /* border-radius: 8px;  */
+    padding: 8px;
     text-align: center; 
 }
 
 .grid img {
-    max-width: 90%; 
+    max-width: 85%; 
     height: auto; 
 }
 
@@ -29,7 +27,7 @@
     width: 300px;
     height: 400px;
     perspective: 1000px; /*3D*/
-    margin: 20px; 
+    margin: 3px; 
 }
 
 .card-front, .card-back {
@@ -67,6 +65,6 @@
     transform: rotateY(0); 
 }
 
-.card-front h2, .card-front h6 {
-    margin: 8px; 
+.card-front h2, .card-front h4, .card-front h5 {
+    margin: 3px; 
 }
